--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,14 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="The Title of Your Page" />
-    <meta property="og:description" content="The description of your page." />
-    <meta property="og:image" content="https://images.unsplash.com/photo-1525609004556-c46c7d6cf023?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8Y2Fyc3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80" />
+    <meta property="og:title" content=" - Air * Land•N•Sea - " />
+    <meta property="og:description" content="Air Land-N-Sea, an Airbnb clone, allows users host their own or rent another's fast toy. If you enjoyed this project or are looking to connect with the developer, please contact Paul Chang at joonyc88@gmail.com." />
+    <meta name="image" property="og:image" content="https://i.imgur.com/fZM95P8.png" />
     <meta property="og:image:type" content="image/jpeg" />
-    <meta property="og:image:width" content="400" />
-    <meta property="og:image:height" content="300" />
     <meta property="og:url" content="https://air-land-n-sea.herokuapp.com/" />
+    <meta name="author" content="Paul Chang" />
 
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
