--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,8 @@
     <meta name="theme-color" content="#000000" />
 
     <meta property="og:title" content=" - Air * Land•N•Sea - " />
-    <meta property="og:description" content="Air Land-N-Sea, an Airbnb clone, allows users host their own or rent another's fast toy. If you enjoyed this project or are looking to connect with the developer, please contact Paul Chang at joonyc88@gmail.com." />
+    <meta property="og:description" content="Air Land-N-Sea, an Airbnb clone, allows users host their own or rent another's fast toy. If you enjoyed this project or are looking to connect with the developer, please contact Paul Chang at joonyc88@gmail.com."
+    />
     <meta name="image" property="og:image" content="https://i.imgur.com/fZM95P8.png" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:url" content="https://air-land-n-sea.herokuapp.com/" />
@@ -15,9 +16,11 @@
 
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@700&display=swap" rel="stylesheet">
+
     <title> - Air Land-N-Sea - </title>
-
-
 
 </head>
 </head>
