--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -21,8 +21,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@700&display=swap" rel="stylesheet">
 
     <title> - Air Land-N-Sea - </title>
+    <link rel="icon" href="./favicon.ico" type="favicon"/>
 
-</head>
 </head>
 
 <body>
