--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -19,9 +19,10 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
     <title> - Air Land-N-Sea - </title>
-    <link rel="icon" href="./favicon.ico" type="favicon"/>
+    <link rel="icon" href="./favicon.ico" type="favicon" />
 
 </head>
 
